@@ -49,7 +49,7 @@ EXAMPDEPENDENCS    += $(EXAMPSIMP_DEP) $(EXAMPSIMP_DDEP) $(EXAMPSIMP_EDEP)
 ifdef DOPACKAGE
 DISTRFILES         += $(EXAMPSIMP_S) $(EXAMPSIMP_H) $(EXAMPSIMP_LINKDEF) $(EXAMPSIMP_EXEH) $(EXAMPSIMP_EXES)
 DISTRFILES         += $(EXAMPSIMP_DIR)/Readme.txt
-DISTRFILES         += $(EXAMPSIMP_DIR)/AnalysisStart.sh $(EXAMPSIMP_DIR)/rename.sh 
+DISTRFILES         += $(EXAMPSIMP_DIR)/rename.sh 
 DISTRFILES         += $(EXAMPSIMP_DIR)/*.C 
 endif
 
