@@ -111,7 +111,8 @@ class TGo4AnalysisProxy : public TGo4Proxy {
                             const char* name,
                             const char* remotehost,
                             const char* remotedir,
-                            const char* remoteexe);
+                            const char* remoteexe,
+                            Int_t exe_kind = 0);
 
       static Bool_t LaunchAsServer(TString& launchcmd,
                                    TString& killcmd,
@@ -120,7 +121,8 @@ class TGo4AnalysisProxy : public TGo4Proxy {
                                    const char* name,
                                    const char* remotehost,
                                    const char* remotedir,
-                                   const char* remoteexe);
+                                   const char* remoteexe,
+                                   Int_t exe_kind = 0);
 
       Bool_t ConnectToServer(const char* remotehost,
                              Int_t remoteport,
@@ -147,12 +149,13 @@ class TGo4AnalysisProxy : public TGo4Proxy {
                                     TString& killcmd,
                                     Bool_t server,
                                     Int_t shellkind, // 0 - exec, 1 - rsh, 2 - ssh
-                                    Int_t konsole,
+                                    Int_t konsole,   // 1 - qtwindow, 2 - xterm, 3 - konsole
                                     const char* name,
                                     const char* remotehost,
                                     const char* remotedir,
                                     const char* remoteexe,
-                                    Int_t guiport);
+                                    Int_t guiport,
+                                    Int_t exe_kind = 0); // 0 - executable, 1 - user library
 
       TGo4AnalysisObjectAccess* FindSubmittedProxy(const char* pathname, const char* objname);
       void DeleteSubmittedProxy(TGo4AnalysisObjectAccess* proxy);
