@@ -279,6 +279,16 @@ bool TGo4QSettings::getClientIsServer()
    return getBool("/ClientSetting/IsServer", false);
 }
 
+void TGo4QSettings::setClientExeMode(int mode)
+{
+   setInt("/ClientSetting/ExeMode", mode);
+}
+
+int TGo4QSettings::getClientExeMode()
+{
+   return getInt("/ClientSetting/ExeMode", 0);
+}
+
 
 void TGo4QSettings::setClientPort(int nport)
 {
