@@ -36,8 +36,9 @@ class TGo4Script : public TGo4AbstractInterface {
                           const char* ClientDir,
                           const char* ClientExec,
                           const char* ClientNode,
-                          Int_t ShellMode =  2,      // 1 = rsh  2 = ssh
-                          Int_t TermMode = 1);      // 1 = Qt   2 = Xterm 3 = konsole
+                          Int_t ShellMode =  2,      // 0 = exec, 1 = rsh  2 = ssh
+                          Int_t TermMode = 1,        // 1 = Qt   2 = Xterm 3 = konsole
+                          Int_t ExeMode = 0);        // 0 = exe, 1 = lib
       void ConnectAnalysis(const char* ServerNode,
                            Int_t ServerPort,
                            Int_t ControllerMode,  // 0 - obsrver, 1- controller, 2 - administrator
