@@ -238,13 +238,17 @@
       <number>6</number>
      </property>
      <item>
-      <widget class="QLabel" name="TextLabelExe" >
-       <property name="text" >
-        <string>Exe </string>
-       </property>
-       <property name="wordWrap" >
-        <bool>false</bool>
-       </property>
+      <widget class="QComboBox" name="ExeModeCombo" >
+       <item>
+        <property name="text" >
+         <string>Exe</string>
+        </property>
+       </item>
+       <item>
+        <property name="text" >
+         <string>Lib</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
@@ -282,12 +286,6 @@
      </property>
      <item>
       <widget class="QLabel" name="TextLabel2" >
-       <property name="minimumSize" >
-        <size>
-         <width>30</width>
-         <height>0</height>
-        </size>
-       </property>
        <property name="frameShape" >
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -295,7 +293,7 @@
         <enum>QFrame::Plain</enum>
        </property>
        <property name="text" >
-        <string>Host</string>
+        <string>Host </string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
